Thu Mar 28 08:33:21 1996  Tom Tromey  <tromey@creche.cygnus.com>

	* automake.in (require_conf_file_with_conf_line): Yet another
	function of this form.
	(libtool_line): New variable.
	(handle_libraries): Handle libtool.

	* libraries-vars.am: Removed.

	* automake.in (seen_libtool): New variable.
	(scan_configure): Look for gm_PROG_LIBTOOL or AC_PROG_LIBTOOL.

	* automake.in (handle_dist_worker): Handle dist-local.

	* Makefile.am (maintainer-check): Do "make check" after all syntax
	checks.

	* texi-version.am (stamp-@VTI@): Look for mdate-sh in appropriate
	directory.

	* automake.in ($seen_arg_prog): New global.
	(handle_programs): Error if AC_ARG_PROGRAM not seen.
	(handle_scripts): Ditto.
	(handle_configure): mkinstalldirs now a config file.
	(handle_installdirs): Find mkinstalldirs in config_aux_dir.
	(handle_dist_worker): Removed DIST_SUBDIRS.
	(require_file_path): New variable.
	(require_file_with_conf_line): Set it.
	(require_file_with_line): Ditto.
	(require_file): Ditto.
	(require_file_internal): Incorporated code from
	require_config_file.
	(require_config_file): Rewrote.
	(require_conf_file_with_line): New function.
	(handle_texinfo): Use it for mdate-sh.
	(handle_texinfo): Look for mdate-sh in appropriate directory.

Tue Mar 26 13:47:54 1996  Tom Tromey  <tromey@creche.cygnus.com>

	* Makefile.am (cvs-dist): Find NEWS in srcdir.
	* automake.in (handle_dist_worker): Find NEWS in srcdir.
	($RULE_PATTERN): Include chars "$(){}/" in allowable patterns in a
	rule.
	(require_config_file): Set config_aux_path when file found.
	($config_aux_dir): New variable.
	(require_config_file): Set it.
	(handle_man_pages): Find mkinstalldirs in config_aux_dir.

Mon Mar 25 15:32:57 1996  Tom Tromey  <tromey@creche.cygnus.com>

	* data.am (install-@DIR@DATA): Also allow data to be in build
	directory.

Sun Mar 24 19:56:28 1996  Tom Tromey  <tromey@creche.cygnus.com>

	* automake.in (am_install_var): Don't look in EXTRA_primary