@@ -1,4 +1,5 @@
 Priorities for release:
+* Fix all mkinstalldirs invocations
 * Add support for libtool
 
 Other priorities:
