@@ -1,3 +1,10 @@
+Mon Apr  1 09:47:44 1996  Tom Tromey  <tromey@creche.cygnus.com>
+
+	* automake.in (require_file_with_conf_line): Look in
+	$relative_dir, not ".".
+	(require_file_with_line): Ditto.
+	(require_file): Ditto.
+
 Thu Mar 28 08:33:21 1996  Tom Tromey  <tromey@creche.cygnus.com>
 
 	* automake.in (require_conf_file_with_conf_line): Yet another
